--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,4 @@ PSFramework/bin/PSFramework.pdb
 library/PSFramework/obj/*
 library/PSFramework/*.user
 library/PSFramework/bin/*
-*.suo
+library/.vs/PSFramework/v15/.suo
