--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
+# ignore PowerShell Studio files
 *TempPoint*
 *.pssproj
-
-*.suo
 
 # ignore the settings folder and files for VSCode
 .vscode/*
@@ -14,4 +13,4 @@ library/PSFramework/obj/*
 library/PSFramework/*.user
 library/PSFramework/bin/*
 library/.vs/PSFramework/v15/.suo
-library/.vs/PSFramework/v15/.suo
+library/.vs/PSFramework/v15/server/*
